--- a/index.html
+++ b/index.html
@@ -12,5 +12,50 @@
             src="https://kit.fontawesome.com/e5bfc33480.js"
             crossorigin="anonymous"></script>
     </head>
-    <body></body>
+    <body>
+        <header>
+            <nav>
+                <div class="logo">
+                    <img src="./images/youtube-logo.png" alt="" />
+                </div>
+
+                <div class="center_nav">
+                    <div class="search">
+                        <input type="text" name="" id="" />
+                        <button>
+                            <img src="./icons/search.svg" alt="" />
+                        </button>
+                    </div>
+
+                    <div class="mic">
+                        <img src="./icons/mic.svg" alt="" />
+                    </div>
+                </div>
+
+                <div class="side_nav">
+                    <i>
+                        <img src="./icons/video-add.svg" alt="" />
+                    </i>
+                    <i>
+                        <img src="./icons/dot-grid.svg" alt="" />
+                    </i>
+                    <i>
+                        <img src="./icons/bell.svg" alt="" />
+                    </i>
+                    <i>
+                        <img src="./images/avatar.png" alt="" />
+                    </i>
+                </div>
+            </nav>
+
+            <div class="tags">
+                <div class="tag dark">All</div>
+                <div class="tag lite">HTML</div>
+                <div class="tag lite">CSS</div>
+                <div class="tag lite">JAVASCRIPT</div>
+                <div class="tag lite">JQUERY</div>
+                <div class="tag lite">ANGULAR</div>
+            </div>
+        </header>
+    </body>
 </html>
